rns-lang/tests/snapshots/err-parser-outside_class_directive-identifier.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----



HelloWorld
.class public HelloWorld

----- STDOUT -----

----- STDERR -----
Error: unexpected identifier before class definition
   ╭─[ test_data/integration/err/parser/outside_class_directive/identifier.ja:4:1 ]
   │
 4 │ HelloWorld
   │ ─────┬────  
   │      ╰────── this identifier must appear inside a class definition
   │ 
   │ Note: Found identifier 'HelloWorld' before any class was defined. Did you forget to start the class? Try: '.class HelloWorld'
───╯
