rns-lang/tests/snapshots/err-parser-outside_class_directive-static_keyword.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
; some comment
; another comment
static
.class public HelloWorld

----- STDOUT -----

----- STDERR -----
Error: unexpected keyword before class definition
   ╭─[ test_data/integration/err/parser/outside_class_directive/static_keyword.ja:3:1 ]
   │
 3 │ static
   │ ───┬──  
   │    ╰──── this keyword must appear inside a class definition
   │ 
   │ Note: Access flags like 'public' and 'static' must appear within a '.class' or '.method' directive.
───╯
