rns-lang/tests/snapshots/err-parser-outside_class_directive-synthetic_keyword.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
; some comment
; another comment
synthetic
.class public HelloWorld

----- STDOUT -----

----- STDERR -----
Error: unexpected keyword before class definition
   ╭─[ test_data/integration/err/parser/outside_class_directive/synthetic_keyword.ja:3:1 ]
   │
 3 │ synthetic
   │ ────┬────  
   │     ╰────── this keyword must appear inside a class definition
   │ 
   │ Note: Access flags must appear within a '.class' or '.method' directive.
───╯
