rns-lang/tests/snapshots/error-lexer-directives-dot_abstract_wasm.snap
---
source: rns/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.abstract static HelloWorl
ggg
----- STDERR -----
[E001] Error: unknown directive
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/rns/test_data/integration/error/lexer/directives/dot_abstract.ja:1:1 ]
   │
 1 │ .abstract static HelloWorl
   │ ────┬────  
   │     ╰────── unknown directive
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
