rns-lang/tests/snapshots/error-lexer-directives-dot_dot_annotation.snap
---
source: jasm/tests/jasm_test.rs
expression: "&combined"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
..annotation
----- STDERR -----
Error: unknown directive
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/jasm/test_data/integration/error/lexer/directives/dot_dot_annotation.ja:1:1 ]
   │
 1 │ ..annotation
   │ ──────┬─────  
   │       ╰─────── did you mean '.annotation' ?
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
