rns-lang/tests/snapshots/error-lexer-directives-dot_dot_annotation_wasm.snap
---
source: rns/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
..annotation
----- STDERR -----
[E001] Error: unknown directive
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/rns/test_data/integration/error/lexer/directives/dot_dot_annotation.ja:1:1 ]
   │
 1 │ ..annotation
   │ ──────┬─────  
   │       ╰─────── did you mean '.annotation' ?
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
